[gd_scene load_steps=26 format=2]

[ext_resource path="res://Assets/Images/goose_idle (1).png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Player/Heatlh bar.gd" type="Script" id=3]
[ext_resource path="res://Assets/Images/Goose gun.png" type="Texture" id=4]
[ext_resource path="res://Assets/Images/goose_walk_2.png" type="Texture" id=5]
[ext_resource path="res://Assets/Images/goose_walk_3goose_idle2costume2costume6goose_idle2costume2costume5.png" type="Texture" id=6]
[ext_resource path="res://Player/Gun_body.gd" type="Script" id=8]
[ext_resource path="res://Assets/Images/goose_walk_4.png" type="Texture" id=9]
[ext_resource path="res://Assets/Images/goose_walk_1goose_idle2costume2costume3.png" type="Texture" id=10]
[ext_resource path="res://Assets/Images/goose_walk_5.png" type="Texture" id=11]
[ext_resource path="res://Assets/sounds/Goose god mode (1).mp3" type="AudioStream" id=12]
[ext_resource path="res://Assets/Images/goose_jump7.png" type="Texture" id=13]
[ext_resource path="res://Assets/Images/goose_jump2 (1).png" type="Texture" id=14]
[ext_resource path="res://Assets/Images/goose_jump4 (1).png" type="Texture" id=16]
[ext_resource path="res://Assets/Images/goose_jump1 (1).png" type="Texture" id=17]
[ext_resource path="res://Assets/Images/goose_jump5 (1).png" type="Texture" id=18]
[ext_resource path="res://Assets/Images/goose_jump6.png" type="Texture" id=19]
[ext_resource path="res://Assets/Images/goose_jump3 (1).png" type="Texture" id=20]
[ext_resource path="res://Assets/Images/Goose arm.png" type="Texture" id=21]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 14 ), ExtResource( 20 ), ExtResource( 16 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 13 ) ],
"loop": false,
"name": "jump",
"speed": 30.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "slide",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 11 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "wallslide",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 21 ) ],
"loop": true,
"name": "No gun",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SphereMesh" id=10]

[sub_resource type="CapsuleShape2D" id=11]
radius = 57.0
height = 227.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 90.7414, 169.535 )

[sub_resource type="QuadMesh" id=7]

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 100, 100, 97.92, 1 )
self_modulate = Color( 100, 100, 100, 1 )
frames = SubResource( 1 )

[node name="Gun_body" type="KinematicBody2D" parent="AnimatedSprite"]
position = Vector2( 67, -33 )
script = ExtResource( 8 )

[node name="Gun" type="AnimatedSprite" parent="AnimatedSprite/Gun_body"]
self_modulate = Color( 100, 100, 100, 1 )
position = Vector2( 50, -11 )
frames = SubResource( 8 )

[node name="bullet pos" type="Node2D" parent="AnimatedSprite/Gun_body"]
visible = false
position = Vector2( 196, -39 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="AnimatedSprite/Gun_body/bullet pos"]
position = Vector2( 1, 2 )
scale = Vector2( 20.0221, 20 )
mesh = SubResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 38, -2.5 )
shape = SubResource( 11 )

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="Collision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collision"]
position = Vector2( 24, -5.24991 )
scale = Vector2( 1.0304, 1.04256 )
shape = SubResource( 3 )

[node name="Heatlh bar" type="MeshInstance2D" parent="."]
position = Vector2( 0, -233.25 )
scale = Vector2( 100, 30 )
mesh = SubResource( 7 )
script = ExtResource( 3 )

[node name="damage cooldown" type="Timer" parent="."]
wait_time = 0.2

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )

[connection signal="timeout" from="CoyoteTimer" to="." method="_on_CoyoteTimer_timeout"]
[connection signal="timeout" from="damage cooldown" to="." method="_on_damage_cooldown_timeout"]
